force-app/main/default/objects/QR_Scan__c/QR_Scan__c.object-meta.xml
<CustomObject>
    <label>QR Scan</label>
    <nameField>
        <label>QR Scan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QR Scans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>