force-app/main/default/objects/QR_Scan__c/fields/Employee_Id__c.field-meta.xml
<CustomField>
    <fullName>Employee_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee Id</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>QR Scans</relationshipLabel>
    <relationshipName>QR_Scans</relationshipName>
    <type>Lookup</type>
</CustomField>