force-app/main/default/objects/QR_Scan__c/fields/Scanner_IP__c.field-meta.xml
<CustomField>
    <fullName>Scanner_IP__c</fullName>
    <label>Scanner IP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>