force-app/main/default/objects/QR_Scan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Employee_Id__c</columns>
    <columns>NAME</columns>
    <columns>Browser__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Device_Type__c</columns>
    <columns>OS__c</columns>
    <columns>Scan_Time__c</columns>
    <columns>Scanner_IP__c</columns>
    <columns>User_Agent__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>